--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -272,7 +272,7 @@ window#waybar {
     font-weight: bold;
 }
 
-#custom-media {
+#mpris {
     background-color: rgba(95, 175, 215, 0.2);
     /*color: #AF00FF;*/
     border-radius: 16px;
@@ -283,3 +283,22 @@ window#waybar {
     font-weight: bold;
 }
 
+
+#backlight-slider slider {
+    min-height: 0px;
+    min-width: 0px;
+    opacity: 0;
+    background-image: none;
+    border: none;
+    box-shadow: none;
+}
+#backlight-slider trough {
+    min-height: 8px;
+    border-radius: 5px;
+    background-color: black;
+}
+#backlight-slider highlight {
+    min-width: 10px;
+    border-radius: 5px;
+    background-color: #317CB9;
+}
